--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -138,11 +138,11 @@ StepsPerDayFull <- aggregate(activityFull$steps, list(activityFull$date), FUN=su
 colnames(StepsPerDayFull) <- c("Date", "Steps")
 # draw the histogram
 g <- ggplot(StepsPerDayFull, aes(Steps))  
-g+geom_histogram(boundary=0, binwidth=2500, col="coral", fill="lightblue")+ggtitle("Histogram of steps per day")+xlab("Steps")+ylab("Frequency")+theme(plot.title = element_text(face="bold", size=12))+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,26,2))
+g+geom_histogram(boundary=0, binwidth=2500, col="coral", fill="blue")+ggtitle("Histogram of steps per day")+xlab("Steps")+ylab("Frequency")+theme(plot.title = element_text(face="bold", size=12))+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,26,2))
 ```
 4B. Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
-```{r}
+```{r}  
 # Mean
 mean(StepsPerDayFull$Steps)
 ```
@@ -172,7 +172,7 @@ activityFull$weekday <- weekdays(activityFull$RealDate)
 # create a new variable indicating weekday or weekend
 activityFull$DayType <- ifelse(activityFull$weekday=='Saturday' | activityFull$weekday=='Sunday', 'weekend','weekday')
 # see first 10 values
-head(activityFull, n=10)
+head(activityFull, n=10) 
 ```
 
 2. Two time series plot of the 5-minute interval (x) and the average number of steps taken averaged across weekday days or weekend days (y).
