--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -52,7 +52,7 @@ StepsPerDay
 
 ```{r}
 g <- ggplot(StepsPerDay, aes(Steps))
-g+geom_histogram(boundary=0, binwidth=2500, col="seagreen", fill="lightgreen")+ggtitle("Histogram of steps per day")+xlab("Steps")+ylab("Frequency")+theme(plot.title = element_text(face="bold", size=12))+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,18,2))
+g+geom_histogram(boundary=0, binwidth=2500, col="seagreen", fill="green")+ggtitle("Histogram of steps per day")+xlab("Steps")+ylab("Frequency")+theme(plot.title = element_text(face="bold", size=12))+scale_x_continuous(breaks=seq(0,25000,2500))+scale_y_continuous(breaks=seq(0,18,2))
 ```
 
 3. Mean and median of total number of steps taken per day
